--- a/tlm_app/static/style.css
+++ b/tlm_app/static/style.css
@@ -5,11 +5,10 @@ html {
   background-image: url("laser_cat.jpg"), url("laser_cat.jpg");
   background-position: left top, right top;
   background-repeat: repeat-y, repeat-y;
-  /*background-color: #eee916;*/
 }
 
 body {
-  width: 640px;
+  width: 56%;
   height: 100%;
   margin: 0 auto;
   padding: 20px;
@@ -23,6 +22,17 @@ h1, h2, h3, h4, h5, h6, a {
   color: #377ba8;
   text-align: center;
 }
+
+/* For mobile phones: */
+/*[class*="description"] {
+  width: 50%;
+}
+
+@media only screen and (min-width: 1920px) {
+  .description {width: 50%;}
+  .upload {width: 50%;}
+  .set {width: 50%;}
+}*/
 
 .description {
   text-align: center;
@@ -46,6 +56,12 @@ h1, h2, h3, h4, h5, h6, a {
   border-radius: 12px;
 }
 
+.upload input {
+  background: #ceb8f4;
+  text-align: center;
+  width: 30%;
+}
+
 .set {
   text-align: center;
   min-height: 250px;
@@ -58,21 +74,49 @@ h1, h2, h3, h4, h5, h6, a {
   border-radius: 12px;
 }
 
-.flash {
-  margin: 1em 0;
-  padding: 1em;
-  background: #cae6f6;
-  border: 1px solid #377ba8;
-}
-
   input, select {
-  width: 50%;
+  width: 30%;
   background: #bad9ff;
   border-radius: 12px;
   padding: 10px;
-  text-align: center;
   font-family: san-serif;
   font-size: large;
   font-weight: bold;
   color: #377ba8;
+  text-align: center;
+}
+
+.table {
+  text-align: center;
+  height: 800px;
+  margin-bottom: 16px;
+  padding: 40px;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid #bacbf7;
+  background: #bacbf7;
+  border-radius: 12px;
+  overflow: scroll;
+}
+
+table thead {
+  background: #0B6FA4;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 16px;
+  overflow: auto;
+  min-height: 800px;
+ }
+
+table tbody {
+  background: #D0E4F5;
+}
+
+table tbody th {
+  font-size: 13px;
+}
+
+table tbody td {
+  font-size: 13px;
+  padding: 10px;
 }
