feat: add rendering templates for LTU subsets

--- a/tlm_app/templates/base.html
+++ b/tlm_app/templates/base.html
@@ -20,7 +20,7 @@
   <form action="/upload" method="post" enctype="multipart/form-data">
       <input type="file" name=file>
       <br><br>
-      <input type=submit value="Submit">
+      <input type="submit" value="Submit">
   </form>
 </div>
 
@@ -29,23 +29,23 @@
     <form action="/table">
       <select name="set" id="set">
         <optgroup label="LTU sets">
-          <option value="LTU1_1">LTU1_1</option>
-          <option value="LTU2_1">LTU2_1</option>
-          <option value="LTU3_1">LTU3_1</option>
+          <option value="LTU1_1">LTU1.1</option>
+          <option value="LTU2_1">LTU2.1</option>
+          <option value="LTU3_1">LTU3.1</option>
         </optgroup>
       </select>
       <br><br>
       <select name="subset" id="subset">
-        <optgroup label="LTU subset">
+        <optgroup label="LTU subsets">
           <option value="brd">brd</option>
-          <option value="ldd_lt">ldd_lt</option>
-          <option value="ldd_rt">ldd_rt</option>
-          <option value="ldd_volt">ldd_volt</option>
-          <option value="pls_hv">pls_hv</option>
-          <option value="pls_ld">pls_ld</option>
-          <option value="pls_cur">pls_cur</option>
-          <option value="chg_cur">chg_cur</option>
-          <option value="chg_volt">chg_volt</option>
+          <option value="chg_cur">CHG.CUR</option>
+          <option value="chg_volt">CHG.VOLT</option>
+          <option value="ldd_lt">LDD.LT</option>
+          <option value="ldd_rt">LDD_RT</option>
+          <option value="ldd_volt">LDD.VOLT</option>
+          <option value="pls_cur">PLS.CUR</option>
+          <option value="pls_hv">PLS.HV</option>
+          <option value="pls_ld">PLS.LD</option>
         </optgroup>
       </select>
       <br><br>
