--- a/tlm_app/static/style.css
+++ b/tlm_app/static/style.css
@@ -8,10 +8,10 @@ html {
 }
 
 body {
-  width: 56%;
+  width: 55%;
   height: 100%;
   margin: 0 auto;
-  padding: 20px;
+  padding: 13px;
   margin-top: -20px;
   margin-bottom: -20px;
   background-color: #faee3f;
@@ -56,10 +56,31 @@ h1, h2, h3, h4, h5, h6, a {
   border-radius: 12px;
 }
 
-.upload input {
+.upload input[type=file] {
+  background: #dcccf7;
+}
+
+.upload input[type=submit] {
   background: #ceb8f4;
   text-align: center;
   width: 30%;
+}
+
+input::file-selector-button {
+  color: #377ba8;
+  padding: 0.6em;
+  border: 5px thin #ceb0f4;
+  border-radius: 99rem;
+  font-family: san-serif;
+  font-size: large;
+  font-weight: bold;
+  background: #ceb8f4;
+  width: 40%;
+}
+
+input::file-selector-button:hover {
+  background-color: #ceb0f4;
+  cursor: pointer;
 }
 
 .set {
@@ -78,7 +99,7 @@ h1, h2, h3, h4, h5, h6, a {
   width: 30%;
   background: #bad9ff;
   border-radius: 12px;
-  padding: 10px;
+  padding: 0.6em;
   font-family: san-serif;
   font-size: large;
   font-weight: bold;
@@ -88,15 +109,17 @@ h1, h2, h3, h4, h5, h6, a {
 
 .table {
   text-align: center;
-  height: 800px;
+  height: 400px;
   margin-bottom: 16px;
-  padding: 40px;
-  justify-content: center;
-  align-items: center;
   border: 3px solid #bacbf7;
   background: #bacbf7;
   border-radius: 12px;
   overflow: scroll;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 table thead {
@@ -104,19 +127,13 @@ table thead {
   color: #FFFFFF;
   text-align: center;
   font-size: 16px;
-  overflow: auto;
-  min-height: 800px;
  }
 
 table tbody {
   background: #D0E4F5;
 }
 
-table tbody th {
-  font-size: 13px;
-}
-
 table tbody td {
-  font-size: 13px;
+  font-size: 16px;
   padding: 10px;
 }
