style: update 'BRD' subset to uppercase

--- a/tlm_app/templates/base.html
+++ b/tlm_app/templates/base.html
@@ -37,11 +37,11 @@
       <br><br>
       <select name="subset" id="subset">
         <optgroup label="LTU subsets">
-          <option value="brd">brd</option>
+          <option value="brd">BRD</option>
           <option value="chg_cur">CHG.CUR</option>
           <option value="chg_volt">CHG.VOLT</option>
           <option value="ldd_lt">LDD.LT</option>
-          <option value="ldd_rt">LDD_RT</option>
+          <option value="ldd_rt">LDD.RT</option>
           <option value="ldd_volt">LDD.VOLT</option>
           <option value="pls_cur">PLS.CUR</option>
           <option value="pls_hv">PLS.HV</option>
