style: better button names

--- a/tlm_app/templates/base.html
+++ b/tlm_app/templates/base.html
@@ -20,7 +20,7 @@
   <form action="/upload" method="post" enctype="multipart/form-data">
       <input type="file" name=file>
       <br><br>
-      <input type="submit" value="Submit">
+      <input type="submit" value="Upload">
   </form>
 </div>
 
@@ -49,7 +49,7 @@
         </optgroup>
       </select>
       <br><br>
-      <input type="submit" value="Submit">
+      <input type="submit" value="View">
     </form>
 </div>
 </body>
