--- a/tlm_app/templates/plot.html
+++ b/tlm_app/templates/plot.html
@@ -2,8 +2,8 @@
 {% block content %}
 <h2>Visualization</h2>
 <body>
-<div class="visualization">
-    <img src="{{ url_for('user_image', filename=file.image) }}">
-</div>
+  <div class="visualization">
+    <img src="{{ url_for('show_plot', filename=filename) }}">
+  </div>
 </body>
 {% endblock %}
