fix: redirect to the main page after uploading the file

--- a/tlm_app/templates/upload.html
+++ b/tlm_app/templates/upload.html
@@ -3,8 +3,6 @@
 <h2>Your file is successfully uploaded</h2>
 
 <div class="file">
-  <form>
-    <input type="button" value="Back to the main page">
-  </form>
+  <a href="{{ url_for('tlm') }}">Back to the main page</a>
 </div>
 {% endblock %}
