--- a/tlm_app/templates/upload.html
+++ b/tlm_app/templates/upload.html
@@ -1,16 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class="flashes">
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
-
-<div class="file">
-  <a href="{{ url_for('tlm') }}">Back to the main page</a>
-</div>
+<body class="flash">
+{% for category, message in get_flashed_messages(with_categories=True) %}
+  <div class="alert alert-{{ category }}">{{ message }}</div>
+{% endfor %}
+<p>
+<a href="{{ url_for('tlm') }}">Back to the main page</a>
+</p>
+</body>
 {% endblock %}
