refactor: extract buttons into classes

--- a/tlm_app/templates/base.html
+++ b/tlm_app/templates/base.html
@@ -20,7 +20,7 @@
   <form action="/upload" method="post" enctype="multipart/form-data">
       <input type="file" name=file>
       <br><br>
-      <input type="submit" value="Upload">
+      <input id="upload_button" type="submit" value="Upload">
   </form>
 </div>
 
@@ -51,7 +51,7 @@
         </optgroup>
       </select>
       <br><br>
-      <input type="submit" value="View">
+      <input id="view_button" type="submit" value="View">
     </form>
 </div>
 </body>
