--- a/tlm_app/templates/table.html
+++ b/tlm_app/templates/table.html
@@ -30,7 +30,7 @@
   <form action="/plot">
     <input type="hidden" name="set" id="set" value="{{ table }}">
     <input type="hidden" name="subset" id="subset" value="{{ subset }}">
-    <input type="submit" value="Plot">
+    <input id="plot_button" type="submit" value="Plot">
   </form>
 </div>
 </body>
