--- a/tlm_app/templates/plot.html
+++ b/tlm_app/templates/plot.html
@@ -1,9 +1,9 @@
-{% extends 'table.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <h2>Visualization</h2>
-<body>
-  <div class="visualization">
-    <img src="{{ url_for('show_plot', filename=filename) }}">
-  </div>
+<body class="image">
+<div class="visual">
+  <img src="{{ url_for('show_plot', filename=filename) }}">
+</div>
 </body>
 {% endblock %}
