--- a/tlm_app/templates/base.html
+++ b/tlm_app/templates/base.html
@@ -24,21 +24,21 @@
   </form>
 </div>
 
-<div class="set">
+<div class="channel">
   <h1>View LTU table</h1>
     <form action="/table">
-      <label for="set">Channel</label>
-      <select name="set" id="set">
-        <optgroup label="LTU sets">
+      <label for="channel">Channel</label>
+      <select name="channel" id="channel">
+        <optgroup label="LTU channels">
           <option value="LTU1_1">LTU1.1</option>
           <option value="LTU2_1">LTU2.1</option>
           <option value="LTU3_1">LTU3.1</option>
         </optgroup>
       </select>
       <br><br>
-      <label for="subset">Subset</label>
-      <select name="subset" id="subset">
-        <optgroup label="LTU subsets">
+      <label for="set">Set</label>
+      <select name="set" id="set">
+        <optgroup label="LTU sets">
           <option value="brd">BRD</option>
           <option value="chg_cur">CHG.CUR</option>
           <option value="chg_volt">CHG.VOLT</option>
