--- a/tlm_app/templates/table.html
+++ b/tlm_app/templates/table.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>{{ table|upper|replace("_", ".") }} set, {{subset|upper|replace("_", ".") }} subset:</h2>
+<h2>{{ table|upper|replace("_", ".") }} channel, {{set|upper|replace("_", ".") }} set:</h2>
 <body>
 <div class="table">
   <table>
@@ -28,8 +28,8 @@
 <div class="plot">
   <h2>Visualize the data</h2>
   <form action="/plot">
-    <input type="hidden" name="set" id="set" value="{{ table }}">
-    <input type="hidden" name="subset" id="subset" value="{{ subset }}">
+    <input type="hidden" name="channel" id="channel" value="{{ table }}">
+    <input type="hidden" name="set" id="set" value="{{ set }}">
     <input id="plot_button" type="submit" value="Plot">
   </form>
 </div>
