fix: correct LTU channels values to use SQLAlchemy queries

--- a/tlm_app/templates/base.html
+++ b/tlm_app/templates/base.html
@@ -30,9 +30,9 @@
       <label for="channel">Channel</label>
       <select name="channel" id="channel">
         <optgroup label="LTU channels">
-          <option value="LTU1_1">LTU1.1</option>
-          <option value="LTU2_1">LTU2.1</option>
-          <option value="LTU3_1">LTU3.1</option>
+          <option value="LTU1.1">LTU1.1</option>
+          <option value="LTU2.1">LTU2.1</option>
+          <option value="LTU3.1">LTU3.1</option>
         </optgroup>
       </select>
       <br><br>
