--- a/tlm_app/templates/table.html
+++ b/tlm_app/templates/table.html
@@ -15,7 +15,7 @@
     <tbody>
     {% for row in rows %}
     <tr>
-      <td>{{ row | first | dt }}</td>
+      <td>{{ row | first }}</td>
       {% for cell in row[1:] %}
       <td>{{ cell | fmt }}</td>
       {% endfor %}
